_old_resources/monitoring.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: graf.kubepv.tk
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
  - host: prom.kubepv.tk
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 80
